# exam-whisperer

./: .gitignore  README.md  api.md
backend/: .env.example  Dockerfile  Makefile  db.py  db_models.py  db_models_topics.py  docker-compose.gpu.yml  docker-compose.yml  init_db.py  main.py  models.py  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20250703_add_llm_columns_to_users.py  20250703_create_topics_table.py  20250703_create_topics_table.py.py  20250703_create_users_table.py  20250704_add_user_topic_notes_and_quiz_history.py  20250705_add_username_fk_to_topics.py
backend/cli/: main.py
backend/pathway_flow/: knowledge_flow.py  progress_flow.py  stream.py  topic_flow.py
backend/routes/: ask.py  progress.py  quiz.py  syllabus.py  upload.py
backend/services/: db_service.py  jsonl_uploader.py  llm.py  parser.py  quiz_utils.py  tracker.py
backend/src/: __init__.py  models.py
backend/src/cli/: main.py
backend/src/pathway_flow/: knowledge_flow.py  pathway_main.py  progress_flow.py  stream.py  topic_flow.py  user_topic_stats_flow.py
backend/src/routes/: ask.py  down_pdf.py  oauth.py  progress.py  quiz.py  quiz_utils.py  reminders.py  syllabus.py  topics.py  upload.py  user.py  voices.py
backend/src/services/: db_service.py  event_logger.py  jsonl_uploader.py  llm.py  omnidimension.py  parser.py  pdf_generator.py  quiz_utils.py  sync_topics_jsonl.py  tracker.py  voices_mods.py
backend/src/utils/: jwt.py
backend/static/: index.html
backend/voice_modules/: __init__.py
frontend/: .eslintrc.js  (+6 more)
(+12 files in other folders)
